Implementazione fontawesome, css e bottoni testata

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Zoom App</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     
-    <header></header>
+    <header>
+        <div class="header__container">
+            <button name="speaker"><i class="fas fa-video"></i> Speaker View</button>
+            <button name="zoom"><i class="fas fa-expand-arrows-alt"></i></button>
+        </div>
+    </header>
+
     <main></main>
+    
     <footer></footer>
 
 </body>
