Main quasi completato e inzio footer

--- a/index.html
+++ b/index.html
@@ -18,9 +18,74 @@
         </div>
     </header>
 
-    <main></main>
-    
-    <footer></footer>
+    <main>
+        <div class="main-container">
+
+            <!-- Freccia Scorrimento Sinistra -->
+            <div class="navigation navigation--left">
+                <p><i class="fas fa-caret-left fa-3x"></i></p>
+                <p><strong>1/2</strong></p>
+            </div>
+      
+            <div class="user__container">
+              <div class="user"><img src="img/arale.png" alt="Arale"></div>
+              <div class="user"><img src="img/ash.webp" alt="Ash Ketchum"></div>
+              <div class="user"><img src="img/chichi.jpg" alt="Chichi"></div>
+              <div class="user"><img src="img/conan.jpg" alt="Conan"></div>
+              <div class="user"><img src="img/doraemon.jpg" alt="Doraemon"></div>
+              <div class="user"><img src="img/elle.jpg" alt="Elle"></div>
+              <div class="user"><img src="img/goku.png" alt="Goku"></div>
+              <div class="user"><img src="img/kakashi.webp" alt="Kakashi"></div>
+              <div class="user"><img src="img/light.jpg" alt="Light"></div>
+              <div class="user"><img src="img/lupen.png" alt="Lupen"></div>
+              <div class="user"><img src="img/nami.jpg" alt="Nami"></div>
+              <div class="user"><img src="img/nobita.webp" alt="Nobita"></div>
+              <div class="user"><img src="img/oliver-hutton.jpg" alt="Oliver Hutton"></div>
+              <div class="user"><img src="img/robin-hood.png" alt="Robin Hood"></div>
+              <div class="user"><img src="img/rufy.jpg" alt="Rufy"></div>
+              <div class="user"><img src="img/saitama.webp" alt="Saitama"></div>
+              <div class="user"><img src="img/sakura.jpg" alt="Sakura"></div>
+              <div class="user"><img src="img/todoroki.jpg" alt="Todoroki"></div>
+              <div class="user"><img src="img/uraraka.jpg" alt="Uraraka"></div>
+              <div class="user"><img src="img/yaoyorozu.jpg" alt="Yaoyorozu"></div>
+            </div>
+
+            <!-- Freccia Scorrimento Destra -->
+            <div class="navigation navigation--right">
+                <p><i class="fas fa-caret-right fa-3x"></i></p>
+                <p><strong>2/2</strong></p>
+            </div>
+
+    </main>
+
+    <footer>
+        <div class="footer__container">
+
+            <div class="footer__sx">
+
+                <!-- Icona Microfono -->
+                <div class="icon">
+                    <p><i class="fas fa-microphone fa-3x"></i></p>
+                    <p>Mute</p>
+                </div>
+                <div class="arrow__up">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+                <!-- Icona Sto Video-->
+                <div class="icon">
+                    <p><i class="fas fa-video fa-3x"></i></p>
+                    <p>Stop Video</p>
+                </div>
+                <div class="arrow__up">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+
+            </div>
+            <div class="footer__center"></div>
+            <div class="footer__dx"></div>
+
+        </div>
+    </footer>
 
 </body>
 </html>
