Main e Footer terminati

--- a/index.html
+++ b/index.html
@@ -23,36 +23,96 @@
 
             <!-- Freccia Scorrimento Sinistra -->
             <div class="navigation navigation--left">
-                <p><i class="fas fa-caret-left fa-3x"></i></p>
+                <p><i class="fas fa-caret-left fa-2x"></i></p>
                 <p><strong>1/2</strong></p>
             </div>
       
             <div class="user__container">
-              <div class="user"><img src="img/arale.png" alt="Arale"></div>
-              <div class="user"><img src="img/ash.webp" alt="Ash Ketchum"></div>
-              <div class="user"><img src="img/chichi.jpg" alt="Chichi"></div>
-              <div class="user"><img src="img/conan.jpg" alt="Conan"></div>
-              <div class="user"><img src="img/doraemon.jpg" alt="Doraemon"></div>
-              <div class="user"><img src="img/elle.jpg" alt="Elle"></div>
-              <div class="user"><img src="img/goku.png" alt="Goku"></div>
-              <div class="user"><img src="img/kakashi.webp" alt="Kakashi"></div>
-              <div class="user"><img src="img/light.jpg" alt="Light"></div>
-              <div class="user"><img src="img/lupen.png" alt="Lupen"></div>
-              <div class="user"><img src="img/nami.jpg" alt="Nami"></div>
-              <div class="user"><img src="img/nobita.webp" alt="Nobita"></div>
-              <div class="user"><img src="img/oliver-hutton.jpg" alt="Oliver Hutton"></div>
-              <div class="user"><img src="img/robin-hood.png" alt="Robin Hood"></div>
-              <div class="user"><img src="img/rufy.jpg" alt="Rufy"></div>
-              <div class="user"><img src="img/saitama.webp" alt="Saitama"></div>
-              <div class="user"><img src="img/sakura.jpg" alt="Sakura"></div>
-              <div class="user"><img src="img/todoroki.jpg" alt="Todoroki"></div>
-              <div class="user"><img src="img/uraraka.jpg" alt="Uraraka"></div>
-              <div class="user"><img src="img/yaoyorozu.jpg" alt="Yaoyorozu"></div>
+                <div class="user">
+                    <img src="img/arale.png" alt="Arale">
+                    <p><i class="fas fa-microphone-slash"></i> Arale</p>
+                </div>
+                <div class="user">
+                    <img src="img/ash.webp" alt="Ash Ketchum">
+                    <p><i class="fas fa-microphone-slash"></i> Ash Ketchum</p>
+                </div>
+                <div class="user">
+                    <img src="img/chichi.jpg" alt="Chichi">
+                    <p><i class="fas fa-microphone-slash"></i> Chichi</p>
+                </div>
+                <div class="user">
+                    <img src="img/conan.jpg" alt="Conan">
+                    <p><i class="fas fa-microphone-slash"></i> Conan</p>
+                </div>
+                <div class="user">
+                    <img src="img/doraemon.jpg" alt="Doraemon">
+                    <p><i class="fas fa-microphone-slash"></i> Doraemon</p>
+                </div>
+                <div class="user">
+                    <img src="img/elle.jpg" alt="Elle">
+                    <p><i class="fas fa-microphone-slash"></i> Elle</p>
+                </div>
+                <div class="user">
+                    <img src="img/goku.png" alt="Goku">
+                    <p><i class="fas fa-microphone-slash"></i> Goku</p>
+                </div>
+                <div class="user">
+                    <img src="img/kakashi.webp" alt="Kakashi">
+                    <p><i class="fas fa-microphone-slash"></i> Kakashi</p>
+                </div>
+                <div class="user">
+                    <img src="img/light.jpg" alt="Light">
+                    <p><i class="fas fa-microphone-slash"></i> Light</p>
+                </div>
+                <div class="user">
+                    <img src="img/lupen.png" alt="Lupen">
+                    <p><i class="fas fa-microphone-slash"></i> Lupen</p>
+                </div>
+                <div class="user">
+                    <img src="img/nami.jpg" alt="Nami">
+                    <p><i class="fas fa-microphone-slash"></i> Nami</p>
+                </div>
+                <div class="user">
+                    <img src="img/nobita.webp" alt="Nobita">
+                    <p><i class="fas fa-microphone-slash"></i> Nobita</p>
+                </div>
+                <div class="user">
+                    <img src="img/oliver-hutton.jpg" alt="Oliver Hutton">
+                    <p><i class="fas fa-microphone-slash"></i> Oliver Hutton</p>
+                </div>
+                <div class="user">
+                    <img src="img/robin-hood.png" alt="Robin Hood">
+                    <p><i class="fas fa-microphone-slash"></i> Robin Hood</p>
+                </div>
+                <div class="user">
+                    <img src="img/rufy.jpg" alt="Rufy">
+                    <p><i class="fas fa-microphone-slash"></i> Rufy</p>
+                </div>
+                <div class="user">
+                    <img src="img/saitama.webp" alt="Saitama">
+                    <p><i class="fas fa-microphone-slash"></i> Saitama</p>
+                </div>
+                <div class="user">
+                    <img src="img/sakura.jpg" alt="Sakura">
+                    <p><i class="fas fa-microphone-slash"></i> Sakura</p>
+                </div>
+                <div class="user">
+                    <img src="img/todoroki.jpg" alt="Todoroki">
+                    <p><i class="fas fa-microphone-slash"></i> Todoroki</p>
+                </div>
+                <div class="user">
+                    <img src="img/uraraka.jpg" alt="Uraraka">
+                    <p><i class="fas fa-microphone-slash"></i> Uraraka</p>
+                </div>
+                <div class="user">
+                    <img src="img/yaoyorozu.jpg" alt="Yaoyorozu">
+                    <p><i class="fas fa-microphone-slash"></i> Yaoyorozu</p>
+                </div>
             </div>
 
             <!-- Freccia Scorrimento Destra -->
             <div class="navigation navigation--right">
-                <p><i class="fas fa-caret-right fa-3x"></i></p>
+                <p><i class="fas fa-caret-right fa-2x"></i></p>
                 <p><strong>2/2</strong></p>
             </div>
 
@@ -64,25 +124,95 @@
             <div class="footer__sx">
 
                 <!-- Icona Microfono -->
-                <div class="icon">
-                    <p><i class="fas fa-microphone fa-3x"></i></p>
-                    <p>Mute</p>
-                </div>
-                <div class="arrow__up">
-                    <i class="fas fa-angle-up"></i>
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-microphone fa-2x"></i></p>
+                        <p>Mute</p>
+                    </div>
+                    <div class="arrow arrow--up">
+                        <i class="fas fa-angle-up"></i>
+                    </div>
                 </div>
                 <!-- Icona Sto Video-->
-                <div class="icon">
-                    <p><i class="fas fa-video fa-3x"></i></p>
-                    <p>Stop Video</p>
-                </div>
-                <div class="arrow__up">
-                    <i class="fas fa-angle-up"></i>
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-video fa-2x"></i></p>
+                        <p>Stop Video</p>
+                    </div>
+                    <div class="arrow arrow--up">
+                        <i class="fas fa-angle-up"></i>
+                    </div>
                 </div>
 
             </div>
-            <div class="footer__center"></div>
-            <div class="footer__dx"></div>
+            <div class="footer__center">
+
+                <!-- Icona Invito -->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-user-plus fa-2x"></i></p>
+                        <p>Invite</p>
+                    </div>
+                </div>
+                <!-- Icona Partecipanti -->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-user-friends fa-2x"></i></p>
+                        <p>Participants</p>
+                    </div>
+                    <div class="arrow arrow--up">
+                        <p>28</p>
+                    </div>
+                </div>
+                <!-- Icona Sondaggi -->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-poll fa-2x"></i></p>
+                        <p>Polling</p>
+                    </div>
+                </div>
+                <!-- Icona Condividi Schermo -->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-desktop icon--share fa-2x"></i></p>
+                        <p>Share Screen</p>
+                    </div>
+                    <div class="arrow arrow--up">
+                        <i class="fas fa-angle-up"></i>
+                    </div>
+                </div>
+                <!-- Icona Invito Membri -->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-comment-dots fa-2x"></i></p>
+                        <p>Invite</p>
+                    </div>
+                </div>
+                <!-- Icona Record -->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-record-vinyl fa-2x"></i></p>
+                        <p>Record</p>
+                    </div>
+                </div>
+                <!-- Icona Stanzze di gruppo-->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fab fa-windows fa-2x"></i></p>
+                        <p>Breakout Rooms</p>
+                    </div>
+                </div>
+                <!-- Icona Di più-->
+                <div class="container__icon">
+                    <div class="icon">
+                        <p><i class="fas fa-ellipsis-h fa-2x"></i></p>
+                        <p>More</p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__dx">
+                <p class="meeting">End Meeting</p>
+            </div>            
 
         </div>
     </footer>
